Added link to root in layout.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,6 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    %h1 Flock
+    %h1= link_to "Flock", root_url
     
     = yield
